2010-02-12  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13483: Page Templates appear alongside FCEs in New Content Wizard when using Static Data Structures (Thanks to Jeff Segars)
	* Fixed bug: #13521: New page wizard has wrong sql-query with staticDS

2010-02-11  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13482: Browse Links Popup for Template Object File Reference should only allow text files (Thanks to Jeff Segars)

2010-02-10  Steffen Kamper  <info@sk-typo3.de>

	* Updated manual
	* Follow-up to bugfix #13465: Edit link for referenced elements are inconsistent
	* Fixed bug: #13066: New Site Wizard is broken

2010-02-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13469: New Page Wizard don't use previewIcon for default TO
	* Fixed bug: #13465: Edit link for referenced elements are inconsistent
	* Fixed bug: #13460: New created DS/TO has wrong save/save and exit after first saving

2010-02-07  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13454: Possible hide of "New Site Wizard"
	* Fixed bug: #13413: When using translationParadigm=free there is no possibility to disable the copy for translation links
	* Fixed bug: #13400: Selector for Subtemplates doesn't respect pageTS settings

2010-02-02  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13397: Fatal error due to cloned class definitions in tempalvoila/classes/preview/* (Thanks to Peter Foerger)

2010-02-01  Steffen Kamper  <info@sk-typo3.de>

	* Changed label "Mapping is up to date."
	* Fixed bug: #13387: Object and Param tag cannot be mapped

2010-02-01  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13382: ext_autoload.php missing 
	* Fixed bug: #8375: Tables entered via RTE break backend layout

2010-01-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13150: Allow edit of oldStyleColumnNumber in mapping module

2010-01-27  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #13235: Pre- & Postprocessing Hook for handleIncomingCommands