@@ -181,7 +181,7 @@ t3lib_extMgm::addTCAcolumns('tt_content', $tempColumns, 1);
 $TCA['tt_content']['ctrl']['typeicons'][$_EXTKEY . '_pi1'] = t3lib_extMgm::extRelPath($_EXTKEY) . '/icon_fce_ce.png';
 t3lib_extMgm::addPlugin(array('LLL:EXT:templavoila/locallang_db.xml:tt_content.CType_pi1', $_EXTKEY . '_pi1', 'EXT:' . $_EXTKEY . '/icon_fce_ce.png'), 'CType');
 
-if ($_EXTCONF['enable.']['selectDataSource']) {
+if ($_EXTCONF['enable.']['selectDataStructure']) {
 	$TCA['tt_content']['types'][$_EXTKEY . '_pi1']['showitem'] = 'CType;;4;button;1-1-1, header;;3;;2-2-2,tx_templavoila_ds,tx_templavoila_to,tx_templavoila_flex;;;;2-2-2, hidden;;1;;3-3-3';
 	if ($TCA['tt_content']['ctrl']['requestUpdate'] != '') {
 		$TCA['tt_content']['ctrl']['requestUpdate'] .= ',';
@@ -269,7 +269,7 @@ $tempColumns = array (
 	),
 );
 t3lib_extMgm::addTCAcolumns('pages', $tempColumns, 1);
-if ($_EXTCONF['enable.']['selectDataSource']) {
+if ($_EXTCONF['enable.']['selectDataStructure']) {
 	t3lib_extMgm::addToAllTCAtypes('pages','tx_templavoila_ds;;;;1-1-1,tx_templavoila_to,tx_templavoila_next_ds;;;;1-1-1,tx_templavoila_next_to,tx_templavoila_flex;;;;1-1-1');
 	if ($TCA['pages']['ctrl']['requestUpdate'] != '') {
 		$TCA['pages']['ctrl']['requestUpdate'] .= ',';
