@@ -11,7 +11,7 @@
 	<data type="array">
 		<languageKey index="default" type="array">
 			<label index="enable.oldPageModule">Enable the classic Page module:Check this box to enable classic Page module in the list of modules.</label>
-			<label index="enable.selectDataSource">Enable data source selection:If this checkbox is checked, page and content elements will have data source selector as they had in older TemplaVoila versions. If current installation has very few template objects, it is recommended to have this checkbox unchecked.</label>
+			<label index="enable.selectDataStructure">Enable data structure selection: If this checkbox is checked, page and content elements will have data structure selector as they had in older TemplaVoila versions. If current installation has very few template objects, it is recommended to have this checkbox unchecked.</label>
 			<label index="enable.renderFCEHeader">Enable Header for FCE's:If this checkbox is checked the header of Content Element type FCE will be rendered like headers of other Content Elements.</label>
 			<label index="staticDS.enable">Enable static files for data structures:Experimental! Use Static DS Conversion Wizard below!</label>
 			<label index="staticDS.path_fce">FCE Data Structure Path:Path to the static data structures for flexible content elements</label>
